--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency> 
+		    <groupId>org.springdoc</groupId> 
+		    <artifactId>springdoc-openapi-ui</artifactId> 
+		    <version>1.6.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
+		<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.9.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
