--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/expenseTracking
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode = none
+expenseTracking.app.secret=expenseTracking
+expenseTracking.expires.in=120000
+refresh.token.expires.in=604800
+
