--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
     <artifactId>jjwt</artifactId>
     <version>0.9.1</version>
         </dependency>
+        <dependency>
+          <groupId>org.awaitility</groupId>
+          <artifactId>awaitility</artifactId>
+            <version>3.1.2</version>
+                <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -88,5 +94,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	
 
 </project>
